--- a/PS06.html
+++ b/PS06.html
@@ -308,7 +308,7 @@ var_obs &lt;- estimates %&gt;% summarise(var_df2 = var(estimates_df2),
 #Calculating the squared bias for each model
 squared_bias &lt;- estimates %&gt;% summarise(mean_df2 = mean(estimates_df2), 
                                         mean_df99 = mean(estimates_df99)) %&gt;% 
-  mutate(bias_df2 = (0.95 - mean_df2)^2,bias_df99 = (0.95 - mean_df99)^2) %&gt;% 
+  mutate(bias_df2 = (0.95^2 - mean_df2)^2,bias_df99 = (0.95^2 - mean_df99)^2) %&gt;% 
   select(bias_df2, bias_df99)
 
 #Combining into one data frame
@@ -366,21 +366,20 @@ error_df &lt;- as.data.frame(error_tbl)</code></pre>
 <td align="left">df2</td>
 <td align="right">0.1042</td>
 <td align="right">0.0007</td>
-<td align="right">0.0274</td>
+<td align="right">0.0139</td>
 <td align="right">0.09</td>
-<td align="right">0.1180</td>
+<td align="right">0.1046</td>
 </tr>
 <tr class="even">
 <td align="left">df99</td>
 <td align="right">0.1080</td>
 <td align="right">0.0180</td>
-<td align="right">0.0023</td>
+<td align="right">0.0000</td>
 <td align="right">0.09</td>
-<td align="right">0.1103</td>
+<td align="right">0.1080</td>
 </tr>
 </tbody>
 </table>
-<p>Note: The difference between MSE and sum is a result of the randomness created by using the rnorm() function to simulate the noise in the data set. However, since the sum falls within the range of 1 <span class="math inline">\(\sigma^2 = 0.09\)</span>, the results displayed in the table remain reasonable.</p>
 </div>
 <div id="analysis" class="section level1">
 <h1>Analysis</h1>
@@ -394,8 +393,10 @@ error_df &lt;- as.data.frame(error_tbl)</code></pre>
 <p><strong>Answers</strong>:</p>
 <ol style="list-style-type: decimal">
 <li>The first sanity check would be to compare my answer to the graphs presented in Lecture 2.7. The graphs give a range that my values should fall inside or near. If I come up with a value far outside the range presented in the graphs, I should reevaluate my calculations and then my method.</li>
-<li>The process of finding the MSE for all values would look very similar to the process used here. Except, instead of finding the MSE for <span class="math inline">\(x_0=0.95\)</span>, we’d find the error using the mean(y_observed) compared to the <span class="math inline">\(mean(f(x)+ \epsilon)\)</span> over the range of possible x values.</li>
-<li>Honestly, I would not use either of these models. <span class="math inline">\(df=2\)</span> is underfit and <span class="math inline">\(df=99\)</span> is overfit. Both have similar error, one due to bias and the other due to variance. A better model would use a df that falls somewhere between 2 and 99.</li>
+<li>The process of finding the MSE for all values would look very similar to the process used here. Except, instead of finding the MSE for <span class="math inline">\(x_0=0.95\)</span>, we’d find the error using the <span class="math inline">\(mean(y_{observed})\)</span> compared to the <span class="math inline">\(mean(f(x)+ \epsilon)\)</span> over the range of possible x values.</li>
+<li>Honestly, I would not use either of these models. <span class="math inline">\(df=2\)</span> is underfit and <span class="math inline">\(df=99\)</span> is overfit. Both have similar error, one due to bias and the other due to variance. A better model would use a df that falls somewhere between 2 and 99.<br />
+Update on 3: Andrew says, “You actually are correct in your assumption. The ideal spline has a # of df between 2 and 99. But if we had to choose between these two, which is slightly better?”<br />
+My response: The splines model with <span class="math inline">\(df=2\)</span> has a slightly lower MSE, so, if you hold a gun to my head, I’ll choose this model. However, I must emphasize that choosing either model would be irresponsible and result in a poor prediction relative to the model created with optimal df.</li>
 </ol>
 </div>
 
